# S2Shores

./: .coveragerc  .gitignore  .gitlab-ci.yml  .pylintrc  .readthedocs.yaml  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE.txt  README.md  README.rst  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
config/: wave_bathy_inversion_config.yaml  wave_bathy_inversion_config_spat_corr.yaml  wave_bathy_inversion_config_temp_corr.yaml
docs/: conf.py  index.rst
docs/source/: api.rst  cli.rst  conf.py  contributing.rst  getting_started.rst  index.rst  install.rst  spatial_dft.rst  tutorial.rst  usage.rst
docs/source/api/: s2shores.bathy_debug.rst  s2shores.bathylauncher.products.rst  s2shores.bathylauncher.rst  s2shores.rst  (+7 more)
notebooks/: sequential_run.ipynb  spatial_correlation.ipynb  spatial_correlation_autoreload.ipynb  spatial_dft.ipynb  temporal_correlation.ipynb  test.ipynb  test_autoreload.ipynb  test_config.ipynb  utils.py
src/bathyinversionvagues/: __init__.py  bathy_physics.py  depthinversionmethods.py  directional_array.py  local_bathymetry_estimation.py  numpy_utils.py  sequence_images_exceptions.py  shoresutils.py  skeleton.py  spatial_dft_bathy_estimator.py  wave_parameters_and_bathy_estimation.py  wavemethods.py  waves_exceptions.py  waves_field_estimation.py  waves_field_sample_dynamics.py  waves_fields_display.py  waves_image.py  waves_radon.py  waves_sinogram.py
src/s2shores/: bathy_physics.py  waves_exceptions.py
tests/: conftest.py  test_ci.py  test_no_regression.py  test_skeleton.py  test_utils.py  test_wave_parameters_and_bathy_estimation.py
(+195 files in other folders)
